--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -28,7 +28,7 @@
         <item
             android:id="@+id/nav_event_map"
             android:icon="@drawable/ic_action_map"
-            android:title="Event Map"/>
+            android:title="Maps"/>
 
         <item
             android:id="@+id/nav_entertainment"
